# aegis-gltf

./: CMakeLists.txt  README.md  gltf.cpp  gltf.h  gltf_print.h  gltf_utils.h
test/: CMakeLists.txt  main.cpp
